--- a/Sections/Projects/Schedule/src/views/login.ejs
+++ b/Sections/Projects/Schedule/src/views/login.ejs
@@ -6,8 +6,27 @@
 
     <div class="col-lg-8 my-3">
       <h1 class="display-1 text-center">Login</h1>
-      <p class="text-center lead">Log in or create your account</p>
+      <p class="text-center lead">Create or log in your account</p>
+     
+     <%- include('includes/messages'); %>
+
       <div class="row">
+                <div class="col-lg">
+                  <h4>Create Account</h4>
+                  <p>Fill out the form to create your account.</p>
+                  <form action="/login/register" method="POST">
+                    <input type="hidden" name="_csrf" value=<%= csrfToken%>>
+                    <div class="form-group">
+                      <label>Email address</label>
+                      <input type="email" class="form-control" name="email" aria-describedby="emailHelp" placeholder="Enter email">
+                      </div>
+                    <div class="form-group">
+                      <label>Password</label>
+                      <input type="password" class="form-control" name="password" aria-describedby="passwordHelp" placeholder="Enter password">
+                      </div>
+                      <button type="password" class="btn btn-primary">Create account</button>
+                  </form>
+                </div>
 
         <div class="col-lg">
           <h4>Log in</h4>
@@ -21,28 +40,10 @@
               </div>
             <div class="form-group">
               <label>Password</label>
-              <input type="email" class="form-control" name="password" aria-describedby="passwordHelp" placeholder="Enter password">
+              <input type="password" class="form-control" name="password" aria-describedby="passwordHelp" placeholder="Enter password">
               </div>
               <button type="password" class="btn btn-primary">Accsess</button>
           </form>
-        </div>
-
-        <div class="col-lg">
-          <h4>Create Account</h4>
-          <p>Fill out the form to create your account.</p>
-          <form action="/login/register" method="POST">
-            <input type="hidden" name="_csrf" value=<%= csrfToken%>>
-            <div class="form-group">
-              <label>Email address</label>
-              <input type="email" class="form-control" name="email" aria-describedby="emailHelp" placeholder="Enter email">
-              </div>
-            <div class="form-group">
-              <label>Password</label>
-              <input type="email" class="form-control" name="password" aria-describedby="passwordHelp" placeholder="Enter password">
-              </div>
-              <button type="password" class="btn btn-primary">Create account</button>
-          </form>
-
         </div>
 
       </div>
