--- a/Sections/Projects/Schedule/src/views/index.ejs
+++ b/Sections/Projects/Schedule/src/views/index.ejs
@@ -8,6 +8,8 @@
       <h1 class="display-1 text-center">Schedule</h1>
       <p class="text-center lead">Add, edit or create a new contact.</p>
 
+      <% include('includes/messages') %>
+
       <div class="responsive-table">
         <table class="table my-3">
             <tr>
