--- a/Sections/Projects/Schedule/src/views/login.ejs
+++ b/Sections/Projects/Schedule/src/views/login.ejs
@@ -11,10 +11,10 @@
      <%- include('includes/messages'); %>
 
       <div class="row">
-                <div class="col-lg">
+                <div class="col-lg my-5">
                   <h4>Create Account</h4>
                   <p>Fill out the form to create your account.</p>
-                  <form action="/login/register" method="POST">
+                  <form class="form-register" action="/login/register" method="POST">
                     <input type="hidden" name="_csrf" value=<%= csrfToken%>>
                     <div class="form-group">
                       <label>Email address</label>
@@ -28,11 +28,11 @@
                   </form>
                 </div>
 
-        <div class="col-lg">
+        <div class="col-lg my-5">
           <h4>Log in</h4>
           <p>If you already have an account, log in below.</p>
 
-          <form action="/login/login" method="POST">
+          <form class="form-login" action="/login/login" method="POST">
             <input type="hidden" name="_csrf" value=<%= csrfToken%>>
             <div class="form-group">
               <label>Email address</label>
